# summarization-api

./: LICENSE.md  README.md  cdk.json  pyproject.toml
cdk.out/: SummarizationApiStack.assets.json  SummarizationApiStack.template.json  manifest.json  tree.json
cdk.out/asset.115b93f4a2fd009aa9f509fb1b6a659397c41f59bc7f100ed1188f3590f54cb2/: bedrock_service.py  summarization.py
cdk.out/asset.3e98a33dcc36d4d900c7efef6789b1f2f8c18984de27c5327b00ef862c94b8f3/: summarization.py
cdk.out/asset.6a46e84e9a613ce037daa37c5c9d8e06d086c7545869d1df39370135ec24505f/: summarization.py
cdk.out/asset.dcee312c092f16bd2b05118ba2ca6d26871efecc44e27bf4c683087082f1742b/: summarization.py
cdk.out/asset.e01ecd57a5a19ace3018bc73ae398bd19e9e60548bf90a87e2087f80348e2f09/: summarization.py
infrastructure/: app.py
infrastructure/summarization_api/: summarization_api_stack.py
lambda/: bedrock_service.py
tests/: test_bedrock_service.py  test_summarization.py
